WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31371
SharedWorkerRepository.connect() does not call WebSharedWorkerRepository
https://bugs.webkit.org/show_bug.cgi?id=31371
Summary
SharedWorkerRepository.connect() does not call WebSharedWorkerRepository
Andrew Wilson
Reported
2009-11-11 13:05:03 PST
In a recent refactoring, we changed how the chromium version of SharedWorkerRepository.connect() works, but left out a call to WebKitSharedWorkerRepository.addSharedWorker(). This causes SharedWorkers to not get shutdown properly when the document exits.
Attachments
proposed patch
(1.48 KB, patch)
2009-11-11 13:10 PST
,
Andrew Wilson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrew Wilson
Comment 1
2009-11-11 13:10:06 PST
Created
attachment 42994
[details]
proposed patch This is the upstreamed version of the change to SharedWorkerRepository from
http://codereview.chromium.org/390017
.
WebKit Commit Bot
Comment 2
2009-11-11 13:23:09 PST
Comment on
attachment 42994
[details]
proposed patch Clearing flags on attachment: 42994 Committed
r50838
: <
http://trac.webkit.org/changeset/50838
>
WebKit Commit Bot
Comment 3
2009-11-11 13:23:12 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug