2009-11-11  Drew Wilson  <atwilson@chromium.org>

Reviewed by Dimitri Glazkov.

        SharedWorkerRepository.connect() does not call WebSharedWorkerRepository
        https://bugs.webkit.org/show_bug.cgi?id=31371

        Test: Unit tests can be enabled downstream when this lands.

        * src/SharedWorkerRepository.cpp:
        (WebCore::SharedWorkerRepository::connect):
        Added missing call to WebSharedWorkerRepository.addSharedWorker().

Canonical link: https://commits.webkit.org/42267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50838 268f45cc-cd09-0410-ab3c-d52691b4dbfc