WebKit/chromium/src/SharedWorkerRepository.cpp
@@ -171,6 +171,9 @@ void SharedWorkerRepository::connect(PassRefPtr<SharedWorker> worker, PassOwnPtr
         return;
     }
 
+    WebKit::webKitClient()->sharedWorkerRepository()->addSharedWorker(
+        webWorker.get(), getId(document));
+
     // The loader object manages its own lifecycle (and the lifecycles of the two worker objects).
     // It will free itself once loading is completed.
     SharedWorkerScriptLoader* loader = new SharedWorkerScriptLoader(worker, url, name, port.release(), webWorker.release());
